--- a/index.html
+++ b/index.html
@@ -1,12 +1,122 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Matthew Wallis</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" charset="utf-8"></script>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title>Matthew Wallis</title>
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Slab|Muli|Ovo|Quattrocento|Bungee+Hairline|Raleway" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.6/jquery.fullpage.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+  <script src="js/script.js" charset="utf-8"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.6/jquery.fullpage.min.js" charset="utf-8">></script>
 
+</head>
+<body>
+
+  <div id="fullpage">
+
+    <div id="home" class="title section">
+      <div class="name">
+        <h1>Matthew<br><span class"right">Wallis</span></h1>
+      </div>
+      <p>Full-Stack Web Developer</p>
+      <div>
+        <a href="https://github.com/mjwim"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/matthew-john-wallis/"><i class="fab fa-linkedin"></i></a>
+        <a href="mailto:mattjwallis@gmail.com"><i class="far fa-envelope"></i></a>
+
+      </div>
+    </div>
+
+    <div id="profile" class="profile section">
+      <h2>Profile</h2>
+    </div>
+
+    <div id="skills" class="skills section">
+      <h2>Skills</h2>
+      <div class="technologies">
+        <i class="devicon-angularjs-plain-wordmark"></i>
+        <i class="devicon-atom-original-wordmark"></i>
+        <i class="devicon-babel-plain"></i>
+        <i class="devicon-bootstrap-plain-wordmark"></i>
+        <i class="devicon-bower-line-wordmark"></i>
+        <i class="devicon-css3-plain-wordmark"></i>
+        <i class="devicon-express-original-wordmark"></i>
+        <i class="devicon-git-plain-wordmark"></i>
+        <i class="devicon-github-plain-wordmark"></i>
+        <i class="devicon-gulp-plain"></i>
+        <i class="devicon-heroku-plain-wordmark"></i>
+        <i class="devicon-html5-plain-wordmark"></i>
+        <i class="devicon-jasmine-plain-wordmark"></i>
+        <i class="devicon-javascript-plain"></i>
+        <i class="devicon-jquery-plain-wordmark"></i>
+        <i class="devicon-mocha-plain"></i>
+        <i class="devicon-nodejs-plain"></i>
+        <i class="devicon-postgresql-plain-wordmark"></i>
+        <i class="devicon-react-original-wordmark"></i>
+        <i class="devicon-rails-plain-wordmark"></i>
+        <i class="devicon-ruby-plain-wordmark"></i>
+        <i class="devicon-sass-original"></i>
+        <i class="devicon-trello-plain-wordmark"></i>
+        <i class="devicon-webpack-plain-wordmark"></i>
+      </div>
+    </div>
+
+    <div id="projects" class="section">
+      <div id="project-4" class="projects slide">
+        <div class="project project-4">
+          <br>
+          <br>
+          <h2>TAXY</h2>
+          <p>description</p>
+          <p>technologies used</p>
+          <p>https://fast-ocean-44538.herokuapp.com/</p>
+          <p>https://github.com/mjwim/wdi-fourth-project</p>
+          <p>github readme</p>
+        </div>
+      </div>
+      <div id="project-3" class="projects slide">
+        <div class="project project-3">
+          <br>
+          <br>
+          <h2>Splittn</h2>
+          <p>description</p>
+          <p>technologies used</p>
+          <p>https://pure-forest-91396.herokuapp.com/</p>
+          <p>https://github.com/mjwim/wdi-group-project	</p>
+          <p>github readme</p>
+        </div>
+      </div>
+      <div id="projects-2" class="projects slide">
+        <div class="project project-2">
+          <br>
+          <br>
+          <h2>Wine and Cheese</h2>
+          <p>description</p>
+          <p>technologies used</p>
+          <p>https://pure-stream-55246.herokuapp.com/</p>
+          <p>https://github.com/mjwim/wdi-second-project</p>
+          <p>github readme</p>
+        </div>
+      </div>
+      <div id="projects-1" class="projects slide">
+        <div class="project project-1">
+          <br>
+          <br>
+          <h2>Avocado or House</h2>
+          <p>description</p>
+          <p>technologies used</p>
+          <p>https://dry-badlands-75755.herokuapp.com/</p>
+          <p>https://github.com/mjwim/wdi-first-project</p>
+          <p>github readme</p>
+        </div>
+      </div>
+    </div>
   </body>
-</html>
+  </html>
