--- a/index.html
+++ b/index.html
@@ -15,61 +15,46 @@
   crossorigin="anonymous"></script>
   <script src="js/script.js" charset="utf-8"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.6/jquery.fullpage.min.js" charset="utf-8">></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/TypewriterJS/1.0.0/typewriter.min.js"></script>
 
 </head>
 <body>
 
+  <!-- <ul id="myMenu"> -->
+	<!-- <li data-menuanchor="firstPage" class="active"><a href="#home">Home</a></li>
+	<li data-menuanchor="secondPage"><a href="#profile">Profile</a></li>
+	<li data-menuanchor="thirdPage"><a href="#projects">Portfolio</a></li>
+	<li data-menuanchor="lastPage"><a href="#skills">Skills</a></li> -->
+<!-- </ul> -->
+
   <div id="fullpage">
+
 
     <div id="home" class="title section">
       <div class="name">
-        <h1>Matthew<br><span class"right">Wallis</span></h1>
+        <h1 class="name">Matthew<br><span class"right">Wallis</span></h1>
       </div>
-      <p>Full-Stack Web Developer</p>
+      <p> Web Developer</p>
+      <div id="type">
+        <p>Current focus ...</p>
+      </div>
+      <hr>
       <div>
         <a href="https://github.com/mjwim"><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/matthew-john-wallis/"><i class="fab fa-linkedin"></i></a>
         <a href="mailto:mattjwallis@gmail.com"><i class="far fa-envelope"></i></a>
-
       </div>
     </div>
 
     <div id="profile" class="profile section">
-      <h2>Profile</h2>
+      <h2>PROFILE</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
 
-    <div id="skills" class="skills section">
-      <h2>Skills</h2>
-      <div class="technologies">
-        <i class="devicon-angularjs-plain-wordmark"></i>
-        <i class="devicon-atom-original-wordmark"></i>
-        <i class="devicon-babel-plain"></i>
-        <i class="devicon-bootstrap-plain-wordmark"></i>
-        <i class="devicon-bower-line-wordmark"></i>
-        <i class="devicon-css3-plain-wordmark"></i>
-        <i class="devicon-express-original-wordmark"></i>
-        <i class="devicon-git-plain-wordmark"></i>
-        <i class="devicon-github-plain-wordmark"></i>
-        <i class="devicon-gulp-plain"></i>
-        <i class="devicon-heroku-plain-wordmark"></i>
-        <i class="devicon-html5-plain-wordmark"></i>
-        <i class="devicon-jasmine-plain-wordmark"></i>
-        <i class="devicon-javascript-plain"></i>
-        <i class="devicon-jquery-plain-wordmark"></i>
-        <i class="devicon-mocha-plain"></i>
-        <i class="devicon-nodejs-plain"></i>
-        <i class="devicon-postgresql-plain-wordmark"></i>
-        <i class="devicon-react-original-wordmark"></i>
-        <i class="devicon-rails-plain-wordmark"></i>
-        <i class="devicon-ruby-plain-wordmark"></i>
-        <i class="devicon-sass-original"></i>
-        <i class="devicon-trello-plain-wordmark"></i>
-        <i class="devicon-webpack-plain-wordmark"></i>
-      </div>
-    </div>
 
     <div id="projects" class="section">
-      <div id="project-4" class="projects slide">
         <div class="project project-4">
           <br>
           <br>
@@ -80,8 +65,6 @@
           <p>https://github.com/mjwim/wdi-fourth-project</p>
           <p>github readme</p>
         </div>
-      </div>
-      <div id="project-3" class="projects slide">
         <div class="project project-3">
           <br>
           <br>
@@ -92,8 +75,6 @@
           <p>https://github.com/mjwim/wdi-group-project	</p>
           <p>github readme</p>
         </div>
-      </div>
-      <div id="projects-2" class="projects slide">
         <div class="project project-2">
           <br>
           <br>
@@ -104,8 +85,6 @@
           <p>https://github.com/mjwim/wdi-second-project</p>
           <p>github readme</p>
         </div>
-      </div>
-      <div id="projects-1" class="projects slide">
         <div class="project project-1">
           <br>
           <br>
@@ -116,7 +95,44 @@
           <p>https://github.com/mjwim/wdi-first-project</p>
           <p>github readme</p>
         </div>
-      </div>
     </div>
-  </body>
-  </html>
+
+    <div id="skills" class="skills section">
+      <h2>Skills</h2>
+      <div class="technologies">
+        <h2>Front-end</h2>
+        <i class="devicon-html5-plain-wordmark"></i>
+        <i class="devicon-css3-plain-wordmark"></i>
+        <i class="devicon-bootstrap-plain-wordmark"></i>
+        <i class="devicon-angularjs-plain-wordmark"></i>
+        <i class="devicon-sass-original"></i>
+        <i class="devicon-react-original-wordmark"></i>
+        <i class="devicon-jquery-plain-wordmark"></i>
+        <h2>Languages</h2>
+        <i class="devicon-javascript-plain"></i>
+        <i class="devicon-ruby-plain-wordmark"></i>
+        <h2>Back-end<h2>
+          <i class="devicon-express-original-wordmark"></i>
+          <i class="devicon-nodejs-plain"></i>
+          <i class="devicon-postgresql-plain-wordmark"></i>
+        <h2>Package Managers & compilers</h2>
+        <i class="devicon-bower-line-wordmark"></i>
+        <i class="devicon-babel-plain"></i>
+        <i class="devicon-gulp-plain"></i>
+        <i class="devicon-webpack-plain-wordmark"></i>
+        <h2> Organisation/Deployment <h2>
+          <i class="devicon-git-plain-wordmark"></i>
+          <i class="devicon-github-plain-wordmark"></i>
+          <i class="devicon-heroku-plain-wordmark"></i>
+          <i class="devicon-trello-plain-wordmark"></i>
+          <h2>Methodologies/Practices </h2>
+          <i class="devicon-jasmine-plain-wordmark"></i>
+          <i class="devicon-mocha-plain"></i>
+          <p> Agile methodologies, RESTful web services, CRUD methods, MVC framework, pair programming, TDD, mobile-first design principles, responsive web design, presenting code/projects</p>
+          <h2>Frameworks</h2>
+          <i class="devicon-rails-plain-wordmark"></i>
+        </div>
+      </div>
+
+    </body>
+    </html>
