--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <body>
 
   <!-- <ul id="myMenu"> -->
-	<!-- <li data-menuanchor="firstPage" class="active"><a href="#home">Home</a></li>
-	<li data-menuanchor="secondPage"><a href="#profile">Profile</a></li>
-	<li data-menuanchor="thirdPage"><a href="#projects">Portfolio</a></li>
-	<li data-menuanchor="lastPage"><a href="#skills">Skills</a></li> -->
-<!-- </ul> -->
+  <!-- <li data-menuanchor="firstPage" class="active"><a href="#home">Home</a></li>
+  <li data-menuanchor="secondPage"><a href="#profile">Profile</a></li>
+  <li data-menuanchor="thirdPage"><a href="#projects">Portfolio</a></li>
+  <li data-menuanchor="lastPage"><a href="#skills">Skills</a></li> -->
+  <!-- </ul> -->
 
   <div id="fullpage">
 
@@ -47,17 +47,17 @@
     </div>
 
     <div id="profile" class="profile section">
-      <h2>PROFILE</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="container">
+        <h2>PROFILE</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
     </div>
 
-
     <div id="projects" class="section">
+      <div class="container">
         <div class="project project-4">
-          <br>
-          <br>
           <h2>TAXY</h2>
           <p>description</p>
           <p>technologies used</p>
@@ -66,8 +66,6 @@
           <p>github readme</p>
         </div>
         <div class="project project-3">
-          <br>
-          <br>
           <h2>Splittn</h2>
           <p>description</p>
           <p>technologies used</p>
@@ -76,8 +74,6 @@
           <p>github readme</p>
         </div>
         <div class="project project-2">
-          <br>
-          <br>
           <h2>Wine and Cheese</h2>
           <p>description</p>
           <p>technologies used</p>
@@ -86,8 +82,6 @@
           <p>github readme</p>
         </div>
         <div class="project project-1">
-          <br>
-          <br>
           <h2>Avocado or House</h2>
           <p>description</p>
           <p>technologies used</p>
@@ -95,44 +89,47 @@
           <p>https://github.com/mjwim/wdi-first-project</p>
           <p>github readme</p>
         </div>
+      </div>
     </div>
 
     <div id="skills" class="skills section">
-      <h2>Skills</h2>
-      <div class="technologies">
-        <h2>Front-end</h2>
-        <i class="devicon-html5-plain-wordmark"></i>
-        <i class="devicon-css3-plain-wordmark"></i>
-        <i class="devicon-bootstrap-plain-wordmark"></i>
-        <i class="devicon-angularjs-plain-wordmark"></i>
-        <i class="devicon-sass-original"></i>
-        <i class="devicon-react-original-wordmark"></i>
-        <i class="devicon-jquery-plain-wordmark"></i>
-        <h2>Languages</h2>
-        <i class="devicon-javascript-plain"></i>
-        <i class="devicon-ruby-plain-wordmark"></i>
-        <h2>Back-end<h2>
-          <i class="devicon-express-original-wordmark"></i>
-          <i class="devicon-nodejs-plain"></i>
-          <i class="devicon-postgresql-plain-wordmark"></i>
-        <h2>Package Managers & compilers</h2>
-        <i class="devicon-bower-line-wordmark"></i>
-        <i class="devicon-babel-plain"></i>
-        <i class="devicon-gulp-plain"></i>
-        <i class="devicon-webpack-plain-wordmark"></i>
-        <h2> Organisation/Deployment <h2>
-          <i class="devicon-git-plain-wordmark"></i>
-          <i class="devicon-github-plain-wordmark"></i>
-          <i class="devicon-heroku-plain-wordmark"></i>
-          <i class="devicon-trello-plain-wordmark"></i>
-          <h2>Methodologies/Practices </h2>
-          <i class="devicon-jasmine-plain-wordmark"></i>
-          <i class="devicon-mocha-plain"></i>
-          <p> Agile methodologies, RESTful web services, CRUD methods, MVC framework, pair programming, TDD, mobile-first design principles, responsive web design, presenting code/projects</p>
-          <h2>Frameworks</h2>
-          <i class="devicon-rails-plain-wordmark"></i>
+      <div class="container">
+        <h2>Skills</h2>
+        <div class="technologies">
+          <h2>Front-end</h2>
+          <i class="devicon-html5-plain-wordmark"></i>
+          <i class="devicon-css3-plain-wordmark"></i>
+          <i class="devicon-bootstrap-plain-wordmark"></i>
+          <i class="devicon-angularjs-plain-wordmark"></i>
+          <i class="devicon-sass-original"></i>
+          <i class="devicon-react-original-wordmark"></i>
+          <i class="devicon-jquery-plain-wordmark"></i>
+          <h2>Languages</h2>
+          <i class="devicon-javascript-plain"></i>
+          <i class="devicon-ruby-plain-wordmark"></i>
+          <h2>Back-end<h2>
+            <i class="devicon-express-original-wordmark"></i>
+            <i class="devicon-nodejs-plain"></i>
+            <i class="devicon-postgresql-plain-wordmark"></i>
+            <h2>Package Managers & compilers</h2>
+            <i class="devicon-bower-line-wordmark"></i>
+            <i class="devicon-babel-plain"></i>
+            <i class="devicon-gulp-plain"></i>
+            <i class="devicon-webpack-plain-wordmark"></i>
+            <h2> Organisation/Deployment <h2>
+              <i class="devicon-git-plain-wordmark"></i>
+              <i class="devicon-github-plain-wordmark"></i>
+              <i class="devicon-heroku-plain-wordmark"></i>
+              <i class="devicon-trello-plain-wordmark"></i>
+              <h2>Methodologies/Practices </h2>
+              <i class="devicon-jasmine-plain-wordmark"></i>
+              <i class="devicon-mocha-plain"></i>
+              <p> Agile methodologies, RESTful web services, CRUD methods, MVC framework, pair programming, TDD, mobile-first design principles, responsive web design, presenting code/projects</p>
+              <h2>Frameworks</h2>
+              <i class="devicon-rails-plain-wordmark"></i>
+            </div>
+          </div>
         </div>
-      </div>
 
-    </body>
-    </html>
+      </body>
+      </html>
