linking up website

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Matthew Wallis</title>
   <link href="https://fonts.googleapis.com/css?family=Josefin+Slab|Muli|Ovo|Quattrocento|Bungee+Hairline|Raleway" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.6/jquery.fullpage.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -96,37 +97,56 @@
       <div class="container">
         <h2>Skills</h2>
         <div class="technologies">
-          <h2>Front-end</h2>
-          <i class="devicon-html5-plain-wordmark"></i>
-          <i class="devicon-css3-plain-wordmark"></i>
-          <i class="devicon-bootstrap-plain-wordmark"></i>
-          <i class="devicon-angularjs-plain-wordmark"></i>
-          <i class="devicon-sass-original"></i>
-          <i class="devicon-react-original-wordmark"></i>
-          <i class="devicon-jquery-plain-wordmark"></i>
-          <h2>Languages</h2>
-          <i class="devicon-javascript-plain"></i>
-          <i class="devicon-ruby-plain-wordmark"></i>
-          <h2>Back-end<h2>
-            <i class="devicon-express-original-wordmark"></i>
-            <i class="devicon-nodejs-plain"></i>
-            <i class="devicon-postgresql-plain-wordmark"></i>
-            <h2>Package Managers & compilers</h2>
-            <i class="devicon-bower-line-wordmark"></i>
-            <i class="devicon-babel-plain"></i>
-            <i class="devicon-gulp-plain"></i>
-            <i class="devicon-webpack-plain-wordmark"></i>
-            <h2> Organisation/Deployment <h2>
-              <i class="devicon-git-plain-wordmark"></i>
-              <i class="devicon-github-plain-wordmark"></i>
-              <i class="devicon-heroku-plain-wordmark"></i>
-              <i class="devicon-trello-plain-wordmark"></i>
-              <h2>Methodologies/Practices </h2>
-              <i class="devicon-jasmine-plain-wordmark"></i>
+          <div class="row justify-content-center">
+            <div class="col">
+              <h3>Front-end</h3>
+              <i class="devicon-html5-plain-wordmark"></i>
+              <i class="devicon-css3-plain-wordmark"></i>
+              <i class="devicon-bootstrap-plain-wordmark"></i>
+              <i class="devicon-angularjs-plain-wordmark"></i>
+              <i class="devicon-sass-original"></i>
+              <i class="devicon-react-original-wordmark"></i>
+              <i class="devicon-jquery-plain-wordmark"></i>
+            </div>
+            <div class="col">
+              <h3>Languages</h3>
+              <i class="devicon-javascript-plain"></i>
+              <i class="devicon-ruby-plain-wordmark"></i>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col">
+              <h3>Back-end<h3>
+                <i class="devicon-express-original-wordmark"></i>
+                <i class="devicon-nodejs-plain"></i>
+                <i class="devicon-postgresql-plain-wordmark"></i>
+            </div>
+            <div class="col">
+              <h3>Package Managers & compilers</h3>
+              <i class="devicon-bower-line-wordmark"></i>
+              <i class="devicon-babel-plain"></i>
+              <i class="devicon-gulp-plain"></i>
+              <i class="devicon-webpack-plain-wordmark"></i>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col">
+              <h3> Organisation/Deployment <h3>
+                <i class="devicon-git-plain-wordmark"></i>
+                <i class="devicon-github-plain-wordmark"></i>
+                <i class="devicon-heroku-plain-wordmark"></i>
+                <i class="devicon-trello-plain-wordmark"></i>
+            </div>
+            <div class="col">
+              <h3>Methodologies/Practices </h3>
               <i class="devicon-mocha-plain"></i>
-              <p> Agile methodologies, RESTful web services, CRUD methods, MVC framework, pair programming, TDD, mobile-first design principles, responsive web design, presenting code/projects</p>
-              <h2>Frameworks</h2>
+            </div>
+            <div class="col">
+              <h3>Frameworks</h3>
               <i class="devicon-rails-plain-wordmark"></i>
+            </div>
+          </div>
+                <p> Agile methodologies, RESTful web services, CRUD methods, MVC framework, pair programming, TDD, mobile-first design principles, responsive web design, presenting code/projects</p>
             </div>
           </div>
         </div>
