project div heights

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
 
     <div id="home" class="title section">
       <div class="name">
-        <h1 class="name">Matthew<br><span class"right">Wallis</span></h1>
+        <div>
+          <img src="https://user-images.githubusercontent.com/25264577/37429376-f03cba2c-27c6-11e8-8bda-56982b9e0e16.png" alt="mw logo">
+        </div>
+        <h2 class="name">Matthew Wallis - Web Developer</h2>
       </div>
-      <p> Web Developer</p>
       <div id="type">
         <p>Current focus ...</p>
       </div>
@@ -58,37 +60,41 @@
 
     <div id="projects" class="section">
       <div class="container">
-        <div class="project project-4">
-          <h2>TAXY</h2>
-          <p>description</p>
-          <p>technologies used</p>
-          <p>https://fast-ocean-44538.herokuapp.com/</p>
-          <p>https://github.com/mjwim/wdi-fourth-project</p>
-          <p>github readme</p>
+        <div class="row justify-content-center">
+          <div class="col project project-4">
+            <h2>TAXY</h2>
+            <p>description</p>
+            <p>technologies used</p>
+            <img src="http://fillmurray.com/200/300" alt="TAXY image" class="game-image">
+          <a href="https://fast-ocean-44538.herokuapp.com/"><i class="devicon-heroku-plain-wordmark"></i></a>
+            <a href="https://github.com/mjwim/wdi-fourth-project"><i class="fab fa-github"></i></i> github repo</a>
+          </div>
+          <div class="col project project-3">
+            <h2>SPLITN</h2>
+            <p>description</p>
+            <p>technologies used</p>
+            <img src="https://user-images.githubusercontent.com/25264577/37279625-3f2c9390-25e3-11e8-95ee-a21c5c19f247.png" alt="SPLITN trip image" class="game-image">
+            <a href="https://pure-forest-91396.herokuapp.com/"><i class="devicon-heroku-plain-wordmark"></i></a>
+            <a href="https://github.com/mjwim/wdi-group-project"><i class="fab fa-github"></i></i> github repo</a>
+          </div>
         </div>
-        <div class="project project-3">
-          <h2>Splittn</h2>
-          <p>description</p>
-          <p>technologies used</p>
-          <p>https://pure-forest-91396.herokuapp.com/</p>
-          <p>https://github.com/mjwim/wdi-group-project	</p>
-          <p>github readme</p>
-        </div>
-        <div class="project project-2">
-          <h2>Wine and Cheese</h2>
-          <p>description</p>
-          <p>technologies used</p>
-          <p>https://pure-stream-55246.herokuapp.com/</p>
-          <p>https://github.com/mjwim/wdi-second-project</p>
-          <p>github readme</p>
-        </div>
-        <div class="project project-1">
-          <h2>Avocado or House</h2>
-          <p>description</p>
-          <p>technologies used</p>
-          <p>https://dry-badlands-75755.herokuapp.com/</p>
-          <p>https://github.com/mjwim/wdi-first-project</p>
-          <p>github readme</p>
+        <div class="row justify-content-center">
+          <div class="col project project-2">
+            <h2>Wine and Cheese</h2>
+            <p>description</p>
+            <p>technologies used</p>
+            <img src="https://user-images.githubusercontent.com/25264577/37426166-8eccd8f2-27bd-11e8-920c-ff563bdc5284.png" alt="Wine and Cheese pairing image" class="game-image">
+            <a href="https://pure-stream-55246.herokuapp.com/"><i class="devicon-heroku-plain-wordmark"></i></a>
+            <a href="https://github.com/mjwim/wdi-second-project"><i class="fab fa-github"></i></i> github repo</a>
+          </div>
+          <div class="col project project-1">
+            <h2>Avocado or House</h2>
+            <p>description</p>
+            <p>technologies used</p>
+            <img src="https://user-images.githubusercontent.com/25264577/37425590-c678afd0-27bb-11e8-9ea1-cd14e14a6c7d.jpg" alt="Avocado or Toast in play image" class="game-image">
+            <a href="https://dry-badlands-75755.herokuapp.com/"><i class="devicon-heroku-plain-wordmark"></i></a>
+            <a href="https://github.com/mjwim/wdi-first-project"><i class="fab fa-github"></i></i> github repo</a>
+          </div>
         </div>
       </div>
     </div>
