project pages set

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <div id="profile" class="profile section">
       <div class="container">
         <h2>PROFILE</h2>
+        <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -61,39 +62,52 @@
     <div id="projects" class="section">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col project project-4">
+          <div class="col-12 col-md-8 col-lg-5 project project-4">
             <h2>TAXY</h2>
-            <p>description</p>
-            <p>technologies used</p>
-            <img src="http://fillmurray.com/200/300" alt="TAXY image" class="game-image">
-          <a href="https://fast-ocean-44538.herokuapp.com/"><i class="devicon-heroku-plain-wordmark"></i></a>
-            <a href="https://github.com/mjwim/wdi-fourth-project"><i class="fab fa-github"></i></i> github repo</a>
+            <hr>
+            <p>TAXY is an app targeted at the self-employed or anyone who needs to submit a tax-return an aims to take advantage of the new Open Banking regulations.</p>
+            <div class="row justify-content-center">
+              <a href="https://fast-ocean-44538.herokuapp.com/"><i class="col devicon-heroku-plain-wordmark"></i></a>
+              <img src="http://fillmurray.com/200/300" alt="TAXY image" class="col game-image">
+              <a href="https://github.com/mjwim/wdi-fourth-project"><i class="col devicon-github-plain-wordmark"></i></a>
+            </div>
+            <p><strong>Built with:</strong> MongoDB, Express.js,  Node.js, React.js,Axios, Bcrypt, Bulma, Lodash, Bluebird, Mocha, Chai.</p>
           </div>
-          <div class="col project project-3">
+          <div class="col-12 col-md-8 col-lg-5 project project-3">
             <h2>SPLITN</h2>
-            <p>description</p>
-            <p>technologies used</p>
-            <img src="https://user-images.githubusercontent.com/25264577/37279625-3f2c9390-25e3-11e8-95ee-a21c5c19f247.png" alt="SPLITN trip image" class="game-image">
-            <a href="https://pure-forest-91396.herokuapp.com/"><i class="devicon-heroku-plain-wordmark"></i></a>
-            <a href="https://github.com/mjwim/wdi-group-project"><i class="fab fa-github"></i></i> github repo</a>
+            <hr>
+            <p>SPLITN is an app that allows you to set up a holiday with friends and keep track of bills that individuals have paid for on behalf of the whole group. This was my first experience of collaborating on GitHub.</p>
+            <div class="row justify-content-center">
+              <a href="https://pure-forest-91396.herokuapp.com/"><i class="col devicon-heroku-plain-wordmark"></i></a>
+              <div class="col game-image" style="background-image: url(https://user-images.githubusercontent.com/25264577/37279625-3f2c9390-25e3-11e8-95ee-a21c5c19f247.png)">
+              </div>
+              <a href="https://github.com/mjwim/wdi-group-project"><i class="col devicon-github-plain-wordmark"></i></a>
+            </div>
+            <p><strong>Built with:</strong> MongoDB, Express.js,  Node.js, Angular.js, FilePicker, Axios, Bcrypt, Bulma, Bluebird, Mocha, Chai.</p>
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col project project-2">
+          <div class="col-12 col-md-8 col-lg-5 project project-2">
             <h2>Wine and Cheese</h2>
-            <p>description</p>
-            <p>technologies used</p>
-            <img src="https://user-images.githubusercontent.com/25264577/37426166-8eccd8f2-27bd-11e8-920c-ff563bdc5284.png" alt="Wine and Cheese pairing image" class="game-image">
-            <a href="https://pure-stream-55246.herokuapp.com/"><i class="devicon-heroku-plain-wordmark"></i></a>
-            <a href="https://github.com/mjwim/wdi-second-project"><i class="fab fa-github"></i></i> github repo</a>
+            <hr>
+            <p>Wine and Cheese is a fully RESTful web app allow users to upload wines and cheeses separately and pair any wine with any cheese</p>
+            <div class="row justify-content-center">
+              <a href="https://pure-stream-55246.herokuapp.com/"><i class="col devicon-heroku-plain-wordmark"></i></a>
+              <img src="https://user-images.githubusercontent.com/25264577/37426166-8eccd8f2-27bd-11e8-920c-ff563bdc5284.png" alt="Wine and Cheese pairing image" class="col game-image">
+              <a href="https://github.com/mjwim/wdi-second-project"><i class="col devicon-github-plain-wordmark"></i></a>
+            </div>
+            <p><strong>Built with:</strong> MongoDB, Express.js, EJS Layouts, Bluebird, Bcrypt.</p>
           </div>
-          <div class="col project project-1">
+          <div class="col-12 col-md-8 col-lg-5 project project-1">
             <h2>Avocado or House</h2>
-            <p>description</p>
-            <p>technologies used</p>
-            <img src="https://user-images.githubusercontent.com/25264577/37425590-c678afd0-27bb-11e8-9ea1-cd14e14a6c7d.jpg" alt="Avocado or Toast in play image" class="game-image">
-            <a href="https://dry-badlands-75755.herokuapp.com/"><i class="devicon-heroku-plain-wordmark"></i></a>
-            <a href="https://github.com/mjwim/wdi-first-project"><i class="fab fa-github"></i></i> github repo</a>
+            <hr>
+            <p>Avocado or House is a game with the aim of saving enough money for a house deposit by the player avoiding eating Avocado on Toast.</p>
+            <div class="row justify-content-center">
+              <a href="https://dry-badlands-75755.herokuapp.com/"><i class="col devicon-heroku-plain-wordmark"></i></a>
+              <img src="https://user-images.githubusercontent.com/25264577/37425590-c678afd0-27bb-11e8-9ea1-cd14e14a6c7d.jpg" alt="Avocado or Toast in play image" class="col game-image">
+              <a href="https://github.com/mjwim/wdi-first-project"><i class="col devicon-github-plain-wordmark"></i></a>
+            </div>
+            <p><strong>Built with:</strong> HTML, CSS & JavaScript/jQuery</p>
           </div>
         </div>
       </div>
@@ -102,9 +116,10 @@
     <div id="skills" class="skills section">
       <div class="container">
         <h2>Skills</h2>
+        <hr>
         <div class="technologies">
           <div class="row justify-content-center">
-            <div class="col">
+            <div class="skill-box col">
               <h3>Front-end</h3>
               <i class="devicon-html5-plain-wordmark"></i>
               <i class="devicon-css3-plain-wordmark"></i>
@@ -114,20 +129,20 @@
               <i class="devicon-react-original-wordmark"></i>
               <i class="devicon-jquery-plain-wordmark"></i>
             </div>
-            <div class="col">
+            <div class="skill-box col">
               <h3>Languages</h3>
               <i class="devicon-javascript-plain"></i>
-              <i class="devicon-ruby-plain-wordmark"></i>
             </div>
           </div>
           <div class="row justify-content-center">
-            <div class="col">
+            <div class="skill-box col">
               <h3>Back-end<h3>
                 <i class="devicon-express-original-wordmark"></i>
                 <i class="devicon-nodejs-plain"></i>
                 <i class="devicon-postgresql-plain-wordmark"></i>
+                <i class="devicon-mongodb-plain-wordmark"></i>
             </div>
-            <div class="col">
+            <div class="skill-box col">
               <h3>Package Managers & compilers</h3>
               <i class="devicon-bower-line-wordmark"></i>
               <i class="devicon-babel-plain"></i>
@@ -136,22 +151,24 @@
             </div>
           </div>
           <div class="row justify-content-center">
-            <div class="col">
+            <div class="skill-box col">
               <h3> Organisation/Deployment <h3>
                 <i class="devicon-git-plain-wordmark"></i>
                 <i class="devicon-github-plain-wordmark"></i>
                 <i class="devicon-heroku-plain-wordmark"></i>
                 <i class="devicon-trello-plain-wordmark"></i>
             </div>
-            <div class="col">
+            <div class="skill-box col">
               <h3>Methodologies/Practices </h3>
               <i class="devicon-mocha-plain"></i>
             </div>
-            <div class="col">
-              <h3>Frameworks</h3>
+            <div class="skill-box col">
+              <h3>Other</h3>
               <i class="devicon-rails-plain-wordmark"></i>
+              <i class="devicon-ruby-plain-wordmark"></i>
             </div>
           </div>
+          <hr>
                 <p> Agile methodologies, RESTful web services, CRUD methods, MVC framework, pair programming, TDD, mobile-first design principles, responsive web design, presenting code/projects</p>
             </div>
           </div>
