--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <img src="http://fillmurray.com/200/300" alt="TAXY image" class="col game-image">
               <a href="https://github.com/mjwim/wdi-fourth-project"><i class="col devicon-github-plain-wordmark"></i></a>
             </div>
-            <p><strong>Built with:</strong> MongoDB, Express.js,  Node.js, React.js,Axios, Bcrypt, Bulma, Lodash, Bluebird, Mocha, Chai.</p>
+            <p><strong>Built with:</strong> MongoDB, Express.js,  Node.js, React.js,Axios, Bcrypt, Bulma, Lodash, Bluebird.</p>
           </div>
           <div class="col-12 col-md-8 col-lg-5 project project-3">
             <h2>SPLITN</h2>
