--- a/index.html
+++ b/index.html
@@ -53,9 +53,7 @@
       <div class="container">
         <h2>PROFILE</h2>
         <hr>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>I am Web Developer</p>
       </div>
     </div>
 
@@ -68,7 +66,7 @@
             <p>TAXY is an app targeted at the self-employed or anyone who needs to submit a tax-return an aims to take advantage of the new Open Banking regulations.</p>
             <div class="row justify-content-center">
               <a href="https://fast-ocean-44538.herokuapp.com/"><i class="col devicon-heroku-plain-wordmark"></i></a>
-              <img src="http://fillmurray.com/200/300" alt="TAXY image" class="col game-image">
+              <img src="https://user-images.githubusercontent.com/25264577/37474957-76a1ee46-2869-11e8-922e-e097701ecd97.png" alt="TAXY image" class="col game-image">
               <a href="https://github.com/mjwim/wdi-fourth-project"><i class="col devicon-github-plain-wordmark"></i></a>
             </div>
             <p><strong>Built with:</strong> MongoDB, Express.js,  Node.js, React.js,Axios, Bcrypt, Bulma, Lodash, Bluebird.</p>
