slow heroku links open in new window

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <hr>
             <p>TAXY is an app targeted at the self-employed or anyone who needs to submit a tax-return an aims to take advantage of the new Open Banking regulations.</p>
             <div class="row justify-content-center">
-              <a href="https://fast-ocean-44538.herokuapp.com/"><i class="col devicon-heroku-plain-wordmark"></i></a>
+              <a href="https://fast-ocean-44538.herokuapp.com/" target="_blank"><i class="col devicon-heroku-plain-wordmark"></i></a>
               <img src="https://user-images.githubusercontent.com/25264577/37474957-76a1ee46-2869-11e8-922e-e097701ecd97.png" alt="TAXY image" class="col game-image">
               <a href="https://github.com/mjwim/wdi-fourth-project"><i class="col devicon-github-plain-wordmark"></i></a>
             </div>
@@ -76,7 +76,7 @@
             <hr>
             <p>SPLITN is an app that allows you to set up a holiday with friends and keep track of bills that individuals have paid for on behalf of the whole group. This was my first experience of collaborating on GitHub.</p>
             <div class="row justify-content-center">
-              <a href="https://pure-forest-91396.herokuapp.com/"><i class="col devicon-heroku-plain-wordmark"></i></a>
+              <a href="https://pure-forest-91396.herokuapp.com/" target="_blank"><i class="col devicon-heroku-plain-wordmark"></i></a>
               <div class="col game-image" style="background-image: url(https://user-images.githubusercontent.com/25264577/37279625-3f2c9390-25e3-11e8-95ee-a21c5c19f247.png)">
               </div>
               <a href="https://github.com/mjwim/wdi-group-project"><i class="col devicon-github-plain-wordmark"></i></a>
@@ -90,7 +90,7 @@
             <hr>
             <p>Wine and Cheese is a fully RESTful web app allow users to upload wines and cheeses separately and pair any wine with any cheese</p>
             <div class="row justify-content-center">
-              <a href="https://pure-stream-55246.herokuapp.com/"><i class="col devicon-heroku-plain-wordmark"></i></a>
+              <a href="https://pure-stream-55246.herokuapp.com/" target="_blank"><i class="col devicon-heroku-plain-wordmark"></i></a>
               <img src="https://user-images.githubusercontent.com/25264577/37426166-8eccd8f2-27bd-11e8-920c-ff563bdc5284.png" alt="Wine and Cheese pairing image" class="col game-image">
               <a href="https://github.com/mjwim/wdi-second-project"><i class="col devicon-github-plain-wordmark"></i></a>
             </div>
@@ -101,7 +101,7 @@
             <hr>
             <p>Avocado or House is a game with the aim of saving enough money for a house deposit by the player avoiding eating Avocado on Toast.</p>
             <div class="row justify-content-center">
-              <a href="https://dry-badlands-75755.herokuapp.com/"><i class="col devicon-heroku-plain-wordmark"></i></a>
+              <a href="https://dry-badlands-75755.herokuapp.com/" target="_blank"><i class="col devicon-heroku-plain-wordmark"></i></a>
               <img src="https://user-images.githubusercontent.com/25264577/37425590-c678afd0-27bb-11e8-9ea1-cd14e14a6c7d.jpg" alt="Avocado or Toast in play image" class="col game-image">
               <a href="https://github.com/mjwim/wdi-first-project"><i class="col devicon-github-plain-wordmark"></i></a>
             </div>
