updating built withs

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <img src="https://user-images.githubusercontent.com/25264577/37474957-76a1ee46-2869-11e8-922e-e097701ecd97.png" alt="TAXY image" class="col game-image">
               <a href="https://github.com/mjwim/wdi-fourth-project"><i class="col devicon-github-plain-wordmark"></i></a>
             </div>
-            <p><strong>Built with:</strong> MongoDB, Express.js,  Node.js, React.js,Axios, Bcrypt, Bulma, Lodash, Bluebird.</p>
+            <p><strong>Built with:</strong> MongoDB, Express, React,  Node, Bulma, Bcrypt, Lodash, Bluebird.</p>
           </div>
           <div class="col-12 col-md-8 col-lg-5 project project-3">
             <h2>SPLITN</h2>
@@ -82,7 +82,7 @@
               </div>
               <a href="https://github.com/mjwim/wdi-group-project"><i class="col devicon-github-plain-wordmark"></i></a>
             </div>
-            <p><strong>Built with:</strong> MongoDB, Express.js,  Node.js, Angular.js, FilePicker, Axios, Bcrypt, Bulma, Bluebird, Mocha, Chai.</p>
+            <p><strong>Built with:</strong> MongoDB, Express, Angular, Node, Bulma, Bcrypt, FilePicker, Bluebird, Mocha, Chai.</p>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -95,7 +95,7 @@
               <img src="https://user-images.githubusercontent.com/25264577/37426166-8eccd8f2-27bd-11e8-920c-ff563bdc5284.png" alt="Wine and Cheese pairing image" class="col game-image">
               <a href="https://github.com/mjwim/wdi-second-project"><i class="col devicon-github-plain-wordmark"></i></a>
             </div>
-            <p><strong>Built with:</strong> MongoDB, Express.js, EJS Layouts, Bluebird, Bcrypt.</p>
+            <p><strong>Built with:</strong> MongoDB, Express, EJS Layouts, Node, Bluebird, Bcrypt.</p>
           </div>
           <div class="col-12 col-md-8 col-lg-5 project project-1">
             <h2>Avocado or House</h2>
@@ -106,7 +106,7 @@
               <img src="https://user-images.githubusercontent.com/25264577/37425590-c678afd0-27bb-11e8-9ea1-cd14e14a6c7d.jpg" alt="Avocado or Toast in play image" class="col game-image">
               <a href="https://github.com/mjwim/wdi-first-project"><i class="col devicon-github-plain-wordmark"></i></a>
             </div>
-            <p><strong>Built with:</strong> HTML, CSS & JavaScript/jQuery</p>
+            <p><strong>Built with:</strong> HTML, CSS & JavaScript, jQuery.</p>
           </div>
         </div>
       </div>
