changin heroku domain name

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <hr>
             <p>Avocado or House is a game with the aim of saving enough money for a house deposit by the player avoiding eating Avocado on Toast.</p>
             <div class="row justify-content-center">
-              <a href="https://dry-badlands-75755.herokuapp.com/" target="_blank"><i class="col devicon-heroku-plain-wordmark"></i></a>
+              <a href="https://avocadoorhouse.herokuapp.com/" target="_blank"><i class="col devicon-heroku-plain-wordmark"></i></a>
               <img src="https://user-images.githubusercontent.com/25264577/37425590-c678afd0-27bb-11e8-9ea1-cd14e14a6c7d.jpg" alt="Avocado or Toast in play image" class="col game-image">
               <a href="https://github.com/mjwim/wdi-first-project"><i class="col devicon-github-plain-wordmark"></i></a>
             </div>
