--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </div>
               <a href="https://github.com/mjwim/wdi-group-project"><i class="col devicon-github-plain-wordmark"></i></a>
             </div>
-            <p><strong>Built with:</strong> MongoDB, Express, Angular, Node, Bulma, Bcrypt, FilePicker, Bluebird, Mocha, Chai.</p>
+            <p><strong>Built with:</strong> MongoDB, Express, Angular, Node, Bulma, Bcrypt, FileStack, Bluebird, Mocha, Chai.</p>
           </div>
         </div>
         <div class="row justify-content-center">
